Replace ArrayList[Long] with long[]